@@ -13,6 +13,7 @@ Changelog
  * `PageChooserBlock` can now accept a list/tuple of page models as `target_model` (Mikalai Radchuk)
  * Styling tweaks for the ModelAdmin's `IndexView` to be more inline with the Wagtail styleguide (Andy Babic)
  * Added `.nvmrc` to the project root for Node versioning support (Janneke Janssen)
+ * Added `form_fields_exclude` property to ModelAdmin views (Matheus Bratfisch)
  * Fix: Marked 'Date from' / 'Date to' strings in wagtailforms for translation (Vorlif)
  * Fix: Unreliable preview is now reliable by always opening in a new window (Kjartan Sverrisson)
  * Fix: Fixed placement of `{{ block.super }}` in `snippets/type_index.html` (LB (Ben Johnston))
